Revert "fix: remove unnecessary line breaks in code"
This reverts commit 12d0808f442589567dcd723ba3d2caf297277a02.

--- a/themes/mg/scss/main.scss
+++ b/themes/mg/scss/main.scss
@@ -1,9 +1,9 @@
 $baseGreen: #0d544e;
 $accentGreen: #00967b;
-$feedOrange: #ff6600;
-$twitterBlue: #00b0ed;
-$facebookBlue: #3b5999;
-$googleRed: #d34836;
+$feedOrange: #FF6600;
+$twitterBlue: #00B0ED;
+$facebookBlue: #3B5999;
+$googleRed: #D34836;
 $githubBlack: #333;
 $mailBlue: #059;
 $textGrey: #444;
@@ -13,60 +13,58 @@ $ancorOver: #0d544e;
 // Base style
 
 html {
-  font: 400 14px / 20px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: 400 14px / 20px "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 a {
-  color: $ancorBase;
-  &:hover {
-    color: $ancorOver;
-  }
+    color: $ancorBase;
+    &:hover {
+        color: $ancorOver;
+    }
 }
 
 // uikit override
 
 .uk-navbar-brand {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .uk-article-meta {
-  & > a {
+    & > a {
     color: $textGrey;
 
-    &:hover {
-      color: $textGrey;
+        &:hover {
+            color: $textGrey;
+        }
     }
-  }
 
-  & > .uk-icon-comment {
-    color: $textGrey;
-  }
+    & > .uk-icon-comment {
+        color: $textGrey;
+    }
 }
 
 .uk-icon-twitter {
-  color: $twitterBlue;
+    color: $twitterBlue;
 }
 
-.uk-icon-facebook,
-.uk-icon-facebook-square {
-  color: $facebookBlue;
+.uk-icon-facebook, .uk-icon-facebook-square {
+    color: $facebookBlue;
 }
 
-.uk-icon-google-plus,
-.uk-icon-google-plus-square {
-  color: $googleRed;
+.uk-icon-google-plus, .uk-icon-google-plus-square {
+    color: $googleRed;
 }
 
 .uk-icon-github {
-  color: $githubBlack;
+    color: $githubBlack;
 }
 
 .uk-icon-envelope {
-  color: $textGrey;
+    color: $textGrey;
 }
 
 .uk-nav-side > li.uk-active > a {
-  background: $accentGreen;
+    background: $accentGreen;
 }
 
 .uk-nav-side > li {
@@ -87,102 +85,103 @@ a {
   }
 }
 
-.uk-pagination > .uk-active > span {
-  background: $accentGreen;
+.uk-pagination>.uk-active>span {
+    background: $accentGreen;
 }
 
 .uk-icon-medium {
-  margin-right: 0.3em;
+    margin-right: 0.3em;
 }
 
 .uk-navbar-toggle {
-  color: white;
-
-  &:hover,
-  &:focus {
     color: white;
-  }
+
+    &:hover, &:focus {
+        color: white;
+    }
 }
 
 .uk-nav-offcanvas {
-  & > li > a {
-    border-top: 1px solid rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+    & > li > a {
+        border-top: 1px solid rgba(0,0,0,.3);
+        box-shadow: inset 0 1px 0 rgba(255,255,255,.05);
+        text-shadow: 0 1px 0 rgba(0,0,0,.5);
 
-    &:last-child {
-      border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+        &:last-child {
+            border-bottom: 1px solid rgba(0,0,0,.3);
+        }
     }
-  }
 
-  & .uk-nav-divider {
-    border-top: 1px solid rgba(255, 255, 255, 0.01);
-    margin: 0;
-    height: 4px;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
-  }
+    & .uk-nav-divider {
+        border-top: 1px solid rgba(255,255,255,.01);
+        margin: 0;
+        height: 4px;
+        background: rgba(0,0,0,.2);
+        box-shadow: inset 0 1px 3px rgba(0,0,0,.3);
+    }
 }
 
+
 .uk-nav-offcanvas .uk-nav-header {
-  margin-top: 0;
-  background: #404040;
-  border-top: 1px solid rgba(0, 0, 0, 0.3);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+    margin-top: 0;
+    background: #404040;
+    border-top: 1px solid rgba(0,0,0,.3);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.05);
+    text-shadow: 0 1px 0 rgba(0,0,0,.5);
 }
 
 // mg style
 
 .mg-header {
-  padding: 1em 0;
-  // Green style
-  background-color: $baseGreen;
+    padding: 1em 0;
+    // Green style
+    background-color: $baseGreen;
 }
 
 .mg-brand {
-  font: {
-    family: "Open Sans", sans-serif;
-    style: italic;
-    size: 2.5em;
-  }
-  padding-left: 0;
+    font: {
+        family: "Open Sans", sans-serif;
+        style: italic;
+        size: 2.5em;
+    }
+    padding-left: 0;
 
-  // Green style
-  color: white;
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
+    // Green style
     color: white;
-  }
+    text-decoration: none;
 
-  @media (max-width: 767px) {
-    padding: 0;
-    max-width: 100%;
-    font-size: 2em;
-  }
+    &:hover, &:focus {
+        color: white;
+    }
+
+    @media (max-width: 767px) {
+        padding: 0;
+        max-width: 100%;
+        font-size: 2em;
+    }
+
 }
 
 .mg-tagline {
-  font: {
-    family: "Open Sans", sans-serif;
-    weight: 800;
-  }
-  padding: 1em 0 0;
-  color: white;
+    font: {
+        family: "Open Sans", sans-serif;
+        weight: 800;
+    }
+    padding: 1em 0 0;
+    color: white;
 
-  @media (min-width: 1220px) {
-    padding-left: 0 !important;
-  }
+    @media (min-width: 1220px) {
+        padding-left: 0 !important;
+    }
+
 }
 
 .mg-main {
-  margin: {
-    top: 4em;
-    bottom: 3em;
-  }
-  min-height: 100%;
+    margin: {
+        top: 4em;
+        bottom: 3em;
+    }
+    min-height: 100%;
 }
 
 .mg-container-social {
@@ -190,87 +189,87 @@ a {
 }
 
 .mg-feed {
-  color: $feedOrange;
-  &:hover {
-    text-decoration: none;
     color: $feedOrange;
-  }
+    &:hover {
+        text-decoration: none;
+        color: $feedOrange;
+    }
 }
 
 .mg-list-title {
-  font-size: 2em;
-  line-height: 42px;
-  font-weight: 400;
-  text-transform: none;
-  margin-top: 0.5em;
+    font-size: 2em;
+    line-height: 42px;
+    font-weight: 400;
+    text-transform: none;
+    margin-top: 0.5em;
 }
 
 .mg-footer {
-  margin-bottom: 1em;
+    margin-bottom: 1em;
 }
 
 .mg-author {
-  margin-top: 1em;
+    margin-top: 1em;
 }
 
 .mg-icon-link:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .mg-icons-small {
-  margin-bottom: 1em;
+    margin-bottom: 1em;
 }
 
 .mg-icons-small {
-  & > li > a {
-    color: white;
+    &>li>a {
+        color: white;
 
-    &:hover {
-      color: white;
+        &:hover {
+            color: white;
+        }
     }
-  }
 
-  .uk-icon-rss {
-    background-color: $feedOrange;
-  }
+    .uk-icon-rss {
+        background-color: $feedOrange;
+    }
 
-  .uk-icon-twitter {
-    background-color: $twitterBlue;
-  }
+    .uk-icon-twitter {
+        background-color: $twitterBlue;
+    }
 
-  .uk-icon-facebook {
-    background-color: $facebookBlue;
-  }
+    .uk-icon-facebook {
+        background-color: $facebookBlue;
+    }
 
-  .uk-icon-google-plus {
-    background-color: $googleRed;
-  }
+    .uk-icon-google-plus {
+        background-color: $googleRed;
+    }
 
-  .uk-icon-github {
-    background-color: $githubBlack;
-  }
+    .uk-icon-github {
+        background-color: $githubBlack;
+    }
 
-  .uk-icon-envelope {
-    background-color: $mailBlue;
-  }
+    .uk-icon-envelope {
+        background-color: $mailBlue;
+    }
 }
 
 .mg-badges li {
-  float: left;
-  position: relative;
+    float: left;
+    position: relative;
 }
 
 // Browser Upgrade
 
 .browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
 }
 
 em {
-  color: black !important;
+  color:black !important;
 }
 
 /* Cool hack for choosing image alignment in pure markdown */
@@ -289,5 +288,5 @@ img[src*="#center"] {
   max-width: 100%;
   height: auto;
   margin: auto;
-  float: none !important;
+  float: none!important;
 }
